<resources>
    <string name="app_name">Super Heroes App</string>
    <string name="app_username">Username</string>
    <string name="app_password">Password</string>
    <string name="app_signin">Sign In</string>
    <string name="app_description">Add and visualize your SuperHeroes and have fun!!</string>
    <string name="app_welcome">Hello, Welcome</string>

    <string name="navigation_drawer_open">Open Navigation</string>
    <string name="navigation_drawer_close">Close Navigation</string>
    <string name="navigation_signout">Sign Out</string>
    <string name="navigation_add">Add Super Hero</string>
    <string name="navigation_list">My Super Heroes</string>
    <string name="navigation_about">About</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_main">SuperHeroes</string>
    <string name="title_add">Let\'s Get Started? Add a new Super Hero</string>
    <string name="title_brand">Super Brand, like Marvel...</string>
    <string name="title_add_2">Add</string>
    <string name="title_super_name">Super Name</string>
    <string name="title_add_success">Super Hero added successfully</string>
    <string name="title_add_error">All fields required</string>
    <string name="app_by">By Cauê Almeida</string>
    <string name="app_by_url">www.cauealmeida.com</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="app_action_update">Update</string>
    <string name="app_resp_success">Super Hero updated successfully</string>
    <string name="app_action_delete">Delete</string>
    <string name="app_action_yes">Yeap</string>
    <string name="app_action_no">Nope</string>
    <string name="app_action_question">Are you sure?</string>
    <string name="app_resp_empty">Add a Super Hero</string>

</resources>
