<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_addsuperhero"
            android:icon="@drawable/ic_action_name"
            android:title="@string/navigation_add" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_action_list"
            android:title="@string/navigation_list" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_action_about"
            android:title="@string/navigation_about" />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_action_signout"
            android:title="@string/navigation_signout" />
    </group>

</menu>
