<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_super_hero"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cauealmeida.androidfinal.SuperHeroActivity">

    <TextView
        android:text="@string/title_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:id="@+id/edtSuperName"
        android:hint="@string/title_super_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/edtSuperName"
        android:layout_alignRight="@+id/edtSuperName"
        android:layout_alignEnd="@+id/edtSuperName"
        android:layout_marginTop="13dp"
        android:id="@+id/edtSuperBrand"
        android:hint="@string/title_brand" />

    <Button
        android:text="@string/title_add_2"
        android:clickable="true"
        android:onClick="doSaveHero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtSuperBrand"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnSaveHero" />
</RelativeLayout>
