<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_super_hero_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cauealmeida.androidfinal.SuperHeroDetailActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/edtDetailName"
        android:hint="@string/title_super_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edtDetailBrand"
        android:layout_below="@+id/edtDetailName"
        android:layout_alignLeft="@+id/edtDetailName"
        android:layout_alignStart="@+id/edtDetailName"
        android:hint="@string/title_brand" />

    <Button
        android:text="@string/app_action_update"
        android:layout_width="wrap_content"
        android:clickable="true"
        android:onClick="doSuperUpdate"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtDetailBrand"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:id="@+id/btnSave" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSave"
        android:layout_alignLeft="@+id/btnSave"
        android:layout_alignStart="@+id/btnSave"
        android:layout_marginTop="98dp"
        android:id="@+id/tvDetailId"
        android:layout_alignRight="@+id/btnSave"
        android:layout_alignEnd="@+id/btnSave" />
</RelativeLayout>
